--- a/css/custom.css
+++ b/css/custom.css
@@ -1124,7 +1124,13 @@ a, button, .nav-link, .dropdown-toggle, .navbar-toggler { -webkit-tap-highlight-
   color: #000 !important;
   border: 1px solid #ccc;
   transition: all 0.2s ease;
-  background-image: none;
+}
+
+#offerForm .form-control:not(.is-valid):not(.is-invalid),
+#offerForm .form-select:not(.is-valid):not(.is-invalid),
+#offerForm textarea:not(.is-valid):not(.is-invalid),
+#offerForm input:not(.is-valid):not(.is-invalid) {
+  background-image: none !important;
 }
 
 #offerForm .form-control:focus,
